--- a/bursa-web/package.json
+++ b/bursa-web/package.json
@@ -10,8 +10,19 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "nuxt": "^3.11.2",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "@capitec/omni-components": "^0.11.1",
+    "@nuxt/image": "^1.5.0",
+    "@pinia/nuxt": "0.5.1",
+    "nuxt": "3.11.2",
+    "pinia": "2.1.7",
+    "primeflex": "3.3.1",
+    "primevue": "3.51.0",
+    "vue": "3.4.21",
+    "vue-router": "4.3.0"
+  },
+  "devDependencies": {
+    "@vueuse/nuxt": "^10.9.0",
+    "nuxt-primevue": "^0.3.1",
+    "sass": "1.71.1"
   }
 }
