--- a/bursa-api/bursa-api/appsettings.json
+++ b/bursa-api/bursa-api/appsettings.json
@@ -1,9 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/log.txt",
+          "rollingInterval": "Day",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff zzz} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      
+      }
+    ],
+    "Enrich": ["FromLogContext","WithMachineName","WithThreadId"]
   },
   "AllowedHosts": "*"
 }
