--- a/bursa-api/bursaAPI/appsettings.json
+++ b/bursa-api/bursaAPI/appsettings.json
@@ -20,5 +20,8 @@
     ],
     "Enrich": ["FromLogContext","WithMachineName","WithThreadId"]
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "bursaConnection": "Server=.;Database=bursaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
