--- a/bursa-api/bursaAPI/appsettings.json
+++ b/bursa-api/bursaAPI/appsettings.json
@@ -22,6 +22,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "bursaConnection": "Server=.;Database=bursaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "bursaConnection": "Data Source=localhost;Initial Catalog=Bursa;User ID=sa;pwd=Pwd12345!;Trust Server Certificate=True;"
   }
 }
